--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,17 @@
 
     <!-- Text to display in the list when there are no news [CHAR LIMIT=NONE] -->
     <string name="no_inet">No internet connection.</string>
+
+    <string name="author">Author</string>
+    <string name="name">Name</string>
+    <string name="title">Title</string>
+    <string name="publication_date">Publication Date</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <string name="settings">Settings</string>
+    <!-- Key -->
+    <string name="author_key">author</string>
+    <string name="name_key">name</string>
+    <string name="title_key">title</string>
+    <string name="publication_date_key">publication_date</string>
 </resources>
